# au-green-energy

./: README-MCP.md  README.md  main.py  pyproject.toml  readme.md  requirements.txt  run_solinteg_agent.py  solinteg_mcp_server.py
agents/: agent.py  prompts.py
data/: consumption_data.csv  generation_data.csv
deg/: bpp_responder.py  gateway_client.py  on_search_payload.json
utils/: csv_loader.py
